[package]
name = "rust_os"
version = "0.1.0"
authors = ["Guilherme Lazari <guilherme.lazari@wildlifestudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"


# the profile used for `cargo build`
[profile.dev]
# done in target json
# panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
# done in target json
# panic = "abort" # disable stack unwinding on panic
